# cse170projects

./: .gitignore  readme.md
lab01/: Makefile  app_main.cpp  app_window.cpp  app_window.h  fsh_flat.glsl  glut_window.cpp  ogl_tools.cpp  ogl_tools.h  readme.md  vsh_mcol_flat.glsl
lab01/gsim/: gs_color.h  gs_mat.cpp  gs_mat.h
lab01/visualc14/: glutapp2d.sln  glutapp2d.vcxproj  glutapp2d.vcxproj.filters
lab02/: app_window.cpp  app_window.h  glut_window.cpp  makefile  so_capsule.cpp
lab02-extension/: app_main.cpp  app_window.cpp  app_window.h  fsh_flat.glsl  so_capsule.cpp  so_capsule.h  vsh_mcol_flat.glsl
lab02-extension/glutapp3d.xcodeproj/: project.pbxproj
lab02-extension/visualc14/: glutapp3d.vcxproj.filters
lab02/visualc14/: clean.bat  glutapp3d.vcxproj  glutapp3d.vcxproj.filters
lab03/: app_window.cpp  app_window.h  glut_window.cpp  glut_window.h  makefile  ogl_tools.h  so_axis.cpp  so_axis.h  so_capsule.cpp  so_capsule.h  so_tube.cpp  so_tube.h  vsh_mcol_flat.glsl
lab03/glutapp3d.xcodeproj/: project.pbxproj
lab03/visualc14/: glutapp3d.vcxproj  glutapp3d.vcxproj.filters
lab04/: app_window.cpp  app_window.h  fsh_flat.glsl  fsh_lighting.glsl  nvcompatlog.txt  so_cylinder.cpp  so_cylinder.h  timing_9_20_21_54_8.csv  timing_9_20_5_42_5.csv  timing_9_20_5_51_31.csv  vsh_flat.glsl  vsh_lighting.glsl  vsh_mcol_flat.glsl
lab04/glutapp3d.xcodeproj/: project.pbxproj
lab04/visualc14/: glutapp3d.vcxproj
lab05/: app_window.cpp  app_window.h  fsh_flat_model.glsl  glut_window.cpp  material.h  so_model.cpp  so_model.h  so_model_normals.cpp  so_model_normals.h  vsh_flat_model.glsl  vsh_model.glsl
lab05/armmodel/: quad.model
lab05/glutapp3d.xcodeproj/: project.pbxproj
lab05/gsim/: gs_color.h
lab05/visualc14/: glutapp3d.vcxproj  glutapp3d.vcxproj.filters
lab06/: app_main.cpp  app_window.cpp  app_window.h  fsh_gouraud.glsl  fsh_mcol_phong.glsl  glut_window.h  makefile  ogl_tools.h  readme.txt  so_axis.cpp  so_cylinder.cpp  so_cylinder.h  so_lines.cpp  so_lines.h  so_myobject.cpp  so_myobject.h  so_superquadric.cpp  so_superquadric.h  vsh_mcol_gouraud.glsl  vsh_mcol_phong.glsl
lab06/lab06.xcodeproj/: project.pbxproj
lab06/osx/: Info.plist
lab06/visualc14/: glutapp3d.vcxproj  glutapp3d.vcxproj.filters
lab07/: app_main.cpp  app_window.cpp  app_window.h  curve_eval.cpp  glut_window.cpp  makefile  ogl_tools.h  so_line.h  so_lineshape.h  so_poly.cpp  vsh_lineshape.glsl
lab07/osx/: Info.plist
lab07/visualc14/: polyedapp.vcxproj  polyedapp.vcxproj.filters
lab08/: app_main.cpp  app_window.cpp  app_window.h  curve_eval.cpp  curve_eval.h  fsh_lineshape.glsl  so_axis.cpp  so_axis.h  so_line.cpp  so_lineshape.cpp  so_poly.h
lab08/gsim/: gs_array.h  gs_color.h
lab08/lab07.xcodeproj/: project.pbxproj
lab08/visualc14/: polyedapp.sln  polyedapp.vcxproj  polyedapp.vcxproj.filters
lab10/: app_main.cpp  app_window.cpp  app_window.h  fsh_flat_textured.glsl  fsh_lighting.glsl  makefile  so_sphere.cpp  so_sphere.h  vsh_flat.glsl  vsh_lighting.glsl
lab10/glutapp3d.xcodeproj/: project.pbxproj
lab10/lab10.xcodeproj/: project.pbxproj
project1/: GLTexturedQuad.cpp  GLTexturedQuad.hpp  Transform.cpp  Transform.h  app_main.cpp  app_window.cpp  app_window.h  glut_window.cpp  glut_window.h  glutapp  makefile  ogl_tools.cpp  ogl_tools.h  so_axis.cpp  so_axis.h  vsh_mcol_flat.glsl
project2/: .ycm_extra_conf.py  CMakeLists.txt  app_window.cpp  fsh_lighting.glsl  makefile  ogl_tools.h  processdem.py  report.txt  small.raw  so_segments.cpp  so_sphere.h  so_terrain.cpp  so_terrain.h  vsh_terrain.glsl
project2-concept/: app_main.cpp  app_window.h  fsh_terrain.glsl  glut_window.cpp  light.h  so_cylinder.cpp  so_cylinder.h  so_segments.h  so_sphere.cpp  so_texture.cpp  so_texture.h  test.raw  vsh_flat_textured.glsl  vsh_lighting.glsl
project2/content/: fs1.glsl  tonemap_fs.glsl  tonemap_vs.glsl  vs1.glsl
project2/content/shaders/: diffuse_fs.glsl  diffuse_vs.glsl  directionallight_fs.glsl  downsample4x.glsl  downsample4x_reduce.glsl  fs1.glsl  gbuffer_vs.glsl  lighting_vs.glsl  skybox_fs.glsl  skybox_vs.glsl  terrain_fs.glsl  terrain_tcs.glsl  terrain_tes.glsl  terrain_vs.glsl  tonemap_fs.glsl  vs1.glsl
project2/content/textures/: copyright_notice.txt
project2/data/: extract.sh  hugepath.polyline  launch-bigdata.sh  launch-hugedata.sh  launch-merced.sh  launch-smalldata.sh  merced.polyline
project2/data/compressed/: copyright.md
project2/dependencies/windows/libs/: SDL2.lib  SDL2main.lib  SDL2test.lib
project2/include/project2/: application.hpp  cameraparameters.hpp  chunkedterrain.hpp  common.hpp  cubemap.hpp  curve_eval.hpp  directories.hpp  persistentbuffer.hpp  polyline.hpp  program.hpp  renderpipeline.hpp  shader.hpp  terrain.hpp  texture.hpp  timerstack.hpp
project2/include/project2/geometry/: aabox.hpp  frustum.hpp
project2/include/project2/objects/: glcube.hpp  glfullscreenquad.hpp  glline.hpp  globject.hpp  glsphere.hpp
project2/project2.xcodeproj/project.xcworkspace/xcuserdata/nathaniel.xcuserdatad/: UserInterfaceState.xcuserstate
project2/project2.xcodeproj/xcuserdata/nathaniel.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
project2/project2.xcodeproj/xcuserdata/nathaniel.xcuserdatad/xcschemes/: project2.xcscheme
project2/src/: apple-compat.mm  application.cpp  chunkedterrain.cpp  cubemap.cpp  curve_eval.cpp  directories.cpp  lodepng.cpp  main.cpp  polyline.cpp  program.cpp  renderpipeline.cpp  shader.cpp  terrain.cpp  texture.cpp  timerstack.cpp
project2/src/geometry/: aabox.cpp  frustum.cpp
project2/src/objects/: glcube.cpp  glfullscreenquad.cpp  glline.cpp  globject.cpp  glsphere.cpp
project2/visualc14/: glutapp3d.vcxproj.filters
(+109 files in other folders)
